deploy/circle-api.deployment.yaml
# kubetpl:syntax:$

apiVersion: apps/v1
kind: Deployment
metadata:
  name: circle-api
  namespace: circle-relayer
  labels:
    app: circle-api
spec:
  selector:
    matchLabels:
      app: circle-api
  replicas: 1
  template:
    metadata:
      labels:
        app: circle-api
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: $IMAGE:$TAG
          command: [ "node", "api/index.js" ]
          imagePullPolicy: Always
          # uncomment to explore filesystem during crash loop
          #        command: [ "/bin/sh", "-c", "--" ]
          #        args: [ "while true; do sleep 30; done;" ]
          resources:
            requests:
              memory: 600Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
