deploy/circle-relayer.deployment.yaml
# kubetpl:syntax:$

apiVersion: apps/v1
kind: Deployment
metadata:
  name: circle-relayer
  namespace: circle-relayer
  labels:
    app: circle-relayer
spec:
  selector:
    matchLabels:
      app: circle-relayer
  replicas: 1
  template:
    metadata:
      labels:
        app: circle-relayer
    spec:
      restartPolicy: Always
      containers:
        - name: relayer
          image: $AWS_ACCOUNT.dkr.ecr.us-east-2.amazonaws.com/circle-relayer:$TAG
          imagePullPolicy: Always
          # uncomment to explore filesystem during crash loop
          #        command: [ "/bin/sh", "-c", "--" ]
          #        args: [ "while true; do sleep 30; done;" ]
          resources:
            requests:
              memory: 600Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
          volumeMounts:
            - name: wallet-monitor-config
              mountPath: /usr/src/app/config
      volumes:
        - name: wallet-monitor-config
          configMap:
            name: token-bridge-relayer-env
            defaultMode: 420
            items:
              - key: WALLET_MONITORING_CONFIG
                path: wallet_monitoring.json
