deploy/circle-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circle-api
  namespace: circle-relayer
#  annotations:
#    prometheus.io/scrape: "true"
spec:
  selector:
    app: circle-api
  ports:
    - name: api
      protocol: TCP
      port: 8080
