deploy/circle-relayer-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circle-relayer
  namespace: circle-relayer
spec:
  selector:
    app: circle-relayer
  ports:
    - name: api
      protocol: TCP
      port: 3000
